--- a/app/simple_pages/templates/index.html
+++ b/app/simple_pages/templates/index.html
@@ -1,4 +1,64 @@
 {% extends "base.html" %}
 {% block content %}
-    Index Page
+    <div class="row border border-primary mb-3">
+        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <<<<<<< HEAD
+                    <img src="{{ url_for('static', filename='images/sample.jpeg') }}" class="d-block w-100"
+                    =======
+                    <img src="{{ url_for('static', filename='images/dogsample.jpg') }}" class="d-block w-100"
+                    >>>>>>> index-change
+                    alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="{{ url_for('static', filename='images/sample.jpeg') }}" class="d-block w-100"
+                         alt="...">
+                </div>
+                <div class="carousel-item">
+                    <<<<<<< HEAD
+                    <img src="{{ url_for('static', filename='images/sample.jpeg') }}" class="d-block w-100"
+                    =======
+                    <img src="{{ url_for('static', filename='images/dogsample.jpg') }}" class="d-block w-100"
+                    >>>>>>> index-change
+                    alt="...">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                        the card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
 {% endblock %}
