edited indexhtml and base html a link tags

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,11 +27,12 @@
             </a>
 
             <ul class="nav nav-pills">
-                <li class="nav-item"><a href="/" class="nav-link active" aria-current="page">Home</a></li>
-                <li class="nav-item"><a href="/page1" class="nav-link">Page1</a></li>
-                <li class="nav-item"><a href="/page2" class="nav-link">Page2</a></li>
-                <li class="nav-item"><a href="/page3" class="nav-link">Page3</a></li>
-                <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
+                <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="/page1">Page 1</a></li>
+                <li class="nav-item"><a class="nav-link" href="/page2">Page 2</a></li>
+                <li class="nav-item"><a class="nav-link" href="/page3">Page 3</a></li>
+                <li class="nav-item"><a class="nav-link" href="/page4">Page 4</a></li>
+                <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
             </ul>
         </header>
     </div>
