--- a/app/simple_pages/templates/index.html
+++ b/app/simple_pages/templates/index.html
@@ -4,24 +4,19 @@
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <<<<<<< HEAD
                     <img src="{{ url_for('static', filename='images/sample.jpeg') }}" class="d-block w-100"
                     =======
                     <img src="{{ url_for('static', filename='images/dogsample.jpg') }}" class="d-block w-100"
-                    >>>>>>> index-change
-                    alt="...">
+                    >
                 </div>
                 <div class="carousel-item">
                     <img src="{{ url_for('static', filename='images/sample.jpeg') }}" class="d-block w-100"
                          alt="...">
                 </div>
                 <div class="carousel-item">
-                    <<<<<<< HEAD
                     <img src="{{ url_for('static', filename='images/sample.jpeg') }}" class="d-block w-100"
                     =======
-                    <img src="{{ url_for('static', filename='images/dogsample.jpg') }}" class="d-block w-100"
-                    >>>>>>> index-change
-                    alt="...">
+                    <img src="{{ url_for('static', filename='images/dogsample.jpg') }}" class="d-block w-100">
                 </div>
             </div>
         </div>
