updated about page with lorem ipsum

--- a/app/simple_pages/templates/about.html
+++ b/app/simple_pages/templates/about.html
@@ -1,4 +1,20 @@
 {% extends "base.html" %}
 {% block content %}
-    About Page
+    <div class="row">
+            <div class="col-8">
+                About Page
+                <p>
+                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                </p>
+                <p>
+                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                </p>
+                <p>
+                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                </p>
+            </div>
+            <div class="col"-8>
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+            </div>
+        </div>
 {% endblock %}
