--- a/app/simple_pages/templates/index.html
+++ b/app/simple_pages/templates/index.html
@@ -3,20 +3,9 @@
     <div class="row border border-primary mb-3">
         <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="{{ url_for('static', filename='images/sample.jpeg') }}" class="d-block w-100"
-                    =======
-                    <img src="{{ url_for('static', filename='images/dogsample.jpg') }}" class="d-block w-100"
-                    >
-                </div>
+
                 <div class="carousel-item">
-                    <img src="{{ url_for('static', filename='images/sample.jpeg') }}" class="d-block w-100"
-                         alt="...">
-                </div>
-                <div class="carousel-item">
-                    <img src="{{ url_for('static', filename='images/sample.jpeg') }}" class="d-block w-100"
-                    =======
-                    <img src="{{ url_for('static', filename='images/dogsample.jpg') }}" class="d-block w-100">
+                    <img src="{{ url_for('static', filename='images/sample.jpeg') }}" class="d-block w-100" alt="...">
                 </div>
             </div>
         </div>
