--- a/app/simple_pages/templates/index.html
+++ b/app/simple_pages/templates/index.html
@@ -5,7 +5,7 @@
             <div class="carousel-inner">
 
                 <div class="carousel-item">
-                    <img src="{{ url_for('static', filename='images/sample.jpeg') }}" class="d-block w-100" alt="...">
+                    <img src="{{ url_for('static', filename='images/frontpage.jpg') }}" class="d-block w-100" alt="...">
                 </div>
             </div>
         </div>
