--- a/app/simple_pages/templates/index.html
+++ b/app/simple_pages/templates/index.html
@@ -1,15 +1,23 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="row border border-primary mb-3">
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-inner">
-
-                <div class="carousel-item">
-                    <img src="{{ url_for('static', filename='static/images/frontpage.jpg') }}" class="d-block w-100" alt="...">
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="{{ url_for('static', filename='images/frontpage.jpg') }}" class="d-block w-100"
+                             alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{ url_for('static', filename='images/frontpage2.jpg') }}" class="d-block w-100"
+                             alt="...">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="{{ url_for('static', filename='images/frontpage3.jpg') }}" class="d-block w-100"
+                             alt="...">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
     <div class="row">
         <div class="col">
