updated index bottom cards content with external links, and added a css class for bold

--- a/app/simple_pages/templates/index.html
+++ b/app/simple_pages/templates/index.html
@@ -49,34 +49,31 @@
     <div class="row">
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="..." class="card-img-top" alt="">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h4 class="card-title bold">Student</h4>
+                    <p class="card-text">Always a student of life, I continue my education at NJIT, check the link to my current program!</p>
+                    <a href="https://www5.njit.edu/graduatestudies/degree-programs/graduatecertificates/foundations-cybersecurity-cert/" class="btn btn-primary">NJIT Certificates</a>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="..." class="card-img-top" alt="">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h4 class="card-title bold">Worker</h4>
+                    <p class="card-text">My professional life and education summarized in my linked-in profile below!</p>
+                    <a href="https://www.linkedin.com/in/mauricio-alarco-hildebrandt-296a59104/" class="btn btn-primary">My Linkedin</a>
                 </div>
             </div>
         </div>
         <div class="col">
             <div class="card" style="width: 18rem;">
-                <img src="..." class="card-img-top" alt="...">
+                <img src="..." class="card-img-top" alt="">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                        the card's content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <h4 class="card-title bold">Gamer</h4>
+                    <p class="card-text">Currently my favorite game to play. Competitive, fast-paced, and fun.</p>
+                    <a href="https://www.leagueoflegends.com/en-us/" class="btn btn-primary">League of Legends</a>
                 </div>
             </div>
         </div>
