added git html, added content and updated test for git page

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,7 +28,7 @@
 
             <ul class="nav nav-pills">
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="/page1">Page 1</a></li>
+                <li class="nav-item"><a class="nav-link" href="/git">Git Hub</a></li>
                 <li class="nav-item"><a class="nav-link" href="/page2">Page 2</a></li>
                 <li class="nav-item"><a class="nav-link" href="/page3">Page 3</a></li>
                 <li class="nav-item"><a class="nav-link" href="/page4">Page 4</a></li>
