--- a/app/simple_pages/templates/git.html
+++ b/app/simple_pages/templates/git.html
@@ -6,7 +6,7 @@
             <div class="col" -8>
                 <h3>Branches</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
+                    In Git Hub branches dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
                     incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
                     deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero
                     modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
