--- a/app/simple_pages/templates/index.html
+++ b/app/simple_pages/templates/index.html
@@ -9,13 +9,13 @@
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="/page1">
+                <a href="/git">
                     <img src="{{ url_for('static', filename='images/page1git.PNG') }}" class="d-block w-100"
                          alt="...">
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="/page2">
+                <a href="/docker">
                     <img src="{{ url_for('static', filename='images/page2docker.PNG') }}" class="d-block w-100"
                          alt="...">
                 </a>
