renamed page3 to pyflask html and added pytest checks and updated nav bar links

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -30,7 +30,7 @@
                 <li class="nav-item"><a class="nav-link active" aria-current="page" href="/">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="/git">Git Hub</a></li>
                 <li class="nav-item"><a class="nav-link" href="/docker">Docker</a></li>
-                <li class="nav-item"><a class="nav-link" href="/page3">Page 3</a></li>
+                <li class="nav-item"><a class="nav-link" href="/pyflask">Py Flask</a></li>
                 <li class="nav-item"><a class="nav-link" href="/page4">Page 4</a></li>
                 <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
             </ul>
