updated site names, nav bar links, pytest checks, renamed page4 to cicd

--- a/app/simple_pages/templates/index.html
+++ b/app/simple_pages/templates/index.html
@@ -21,13 +21,13 @@
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="/page3">
+                <a href="/pyflask">
                     <img src="{{ url_for('static', filename='images/page3pyflask.PNG') }}" class="d-block w-100"
                          alt="...">
                 </a>
             </div>
             <div class="carousel-item">
-                <a href="/page4">
+                <a href="/cicd">
                     <img src="{{ url_for('static', filename='images/page4cicd.PNG') }}" class="d-block w-100"
                          alt="...">
                 </a>
