--- a/app/simple_pages/templates/pyflask.html
+++ b/app/simple_pages/templates/pyflask.html
@@ -2,8 +2,9 @@
 {% block content %}
     <div class="row">
         <div class="col-8">
+            <h1 class="bold">Python and Flask</h1>
             <div class="col" -8>
-                <h1 class="bold">Python and Flask</h1>
+                <h1>Python</h1>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
                     incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
@@ -12,7 +13,7 @@
                 </p>
             </div>
             <div class="col" -8>
-                <h1>Git</h1>
+                <h1>Flask</h1>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
                     incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
