--- a/app/simple_pages/templates/cicd.html
+++ b/app/simple_pages/templates/cicd.html
@@ -2,9 +2,8 @@
 {% block content %}
     <div class="row">
         <div class="col-8">
-            <h1 class="bold">About Mauricio</h1>
             <div class="col" -8>
-                <h1>Student</h1>
+                <h1 class="bold">CI/CD</h1>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
                     incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
@@ -13,7 +12,7 @@
                 </p>
             </div>
             <div class="col" -8>
-                <h1>Worker</h1>
+                <h1>Git</h1>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
                     incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
@@ -22,7 +21,7 @@
                 </p>
             </div>
             <div class="col" -8>
-                <h1>Gamer</h1>
+                <h1>Repositories</h1>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
                     incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
