--- a/app/simple_pages/templates/docker.html
+++ b/app/simple_pages/templates/docker.html
@@ -2,9 +2,9 @@
 {% block content %}
     <div class="row">
         <div class="col-8">
-            Docker
+            <h1 class="bold">Docker</h1>
             <div class="col" -8>
-                <h1>Git</h1>
+                <h1>Docker Hub</h1>
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
                     incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
