--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,7 +31,7 @@
                 <li class="nav-item"><a class="nav-link" href="/git">Git Hub</a></li>
                 <li class="nav-item"><a class="nav-link" href="/docker">Docker</a></li>
                 <li class="nav-item"><a class="nav-link" href="/pyflask">Py Flask</a></li>
-                <li class="nav-item"><a class="nav-link" href="/page4">Page 4</a></li>
+                <li class="nav-item"><a class="nav-link" href="/cicd">CI/CD</a></li>
                 <li class="nav-item"><a class="nav-link" href="/about">About</a></li>
             </ul>
         </header>
