added content to py

--- a/app/simple_pages/templates/about.html
+++ b/app/simple_pages/templates/about.html
@@ -6,28 +6,24 @@
             <div class="col" -8>
                 <h1>Student</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
-                    incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
-                    deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero
-                    modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                    I am enrolled in NJIT in hopes to get an education in cybersecurity as the next step in career development.
+                    I have a bachelors from Montclair State University in IT with a minor in chinese. I have atteneded technical
+                    trade school PCAGE where I have furthered my computer knowledge and understanding. I am always learning and I
+                    like this industry for personal interests, hobby, and anything else.
                 </p>
             </div>
             <div class="col" -8>
                 <h1>Worker</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
-                    incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
-                    deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero
-                    modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                    I am currently working in IT for BedBath&Beyond. I like it there and everyone is great. I get to work with a lot
+                    of mobile wireless and network technologies. Thank you.
                 </p>
             </div>
             <div class="col" -8>
                 <h1>Gamer</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
-                    incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
-                    deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero
-                    modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                    I like to play many video games that are complex, competitive, and resource management extensive. league of legends is my favorite, cities skylines, and
+                    battlefield 2042.
                 </p>
             </div>
         </div>
