updated content in git and pyflask pages

--- a/app/simple_pages/templates/git.html
+++ b/app/simple_pages/templates/git.html
@@ -6,46 +6,42 @@
             <div class="col" -8>
                 <h3>Branches</h3>
                 <p>
-                    In Git Hub branches dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
-                    incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
-                    deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero
-                    modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                    In Git Hub, branches are a new/seperate version of the main repository.
                 </p>
             </div>
             <div class="col" -8>
                 <h3>Merge</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
-                    incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
-                    deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero
-                    modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                    In Git, git merge command lets you take the independent lines of development created by git branch
+                     and integrate them into a single branch. Usually back into the main or master branch.
                 </p>
             </div>
             <div class="col" -8>
                 <h3>Commit</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
-                    incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
-                    deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero
-                    modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                    The git commit command captures a snapshot of the project's currently staged changes. Committed
+                     snapshots can be thought of as "safe" versions of a project..
                 </p>
             </div>
             <div class="col" -8>
                 <h3>Tags</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
-                    incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
-                    deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero
-                    modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                    The git tag command are ref's that point to specific points in Git history. Tagging is
+                    generally used to capture a point in history that is used for a marked version release (i.e. v1.0.1).
+                    A tag is like a branch that doesn’t change. Unlike branches, tags, after being created, have no
+                    further history of commits.
                 </p>
             </div>
             <div class="col" -8>
                 <h3>Repositories</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
-                    incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
-                    deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero
-                    modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                    A Git repository is the .git/ folder inside a project. This repository tracks all changes made to
+                    files in your project, building a history over time. Meaning, if you delete the .git/ folder, then
+                    you delete your project’s history.
+
+                    It contains the collection of the files as well as the history of changes made to those files.
+                    Repository in Git is considered as your project folder. A repository has all the project-related data.
+                    Distinct projects have distinct repositories.
                 </p>
             </div>
         </div>
