--- a/app/simple_pages/templates/pyflask.html
+++ b/app/simple_pages/templates/pyflask.html
@@ -6,28 +6,28 @@
             <div class="col" -8>
                 <h1>Python</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
-                    incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
-                    deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero
-                    modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                    I am new to programming and this is my real first experience using python ever. Python is a scripting language
+                     and I have used it so far as a means of testing code, running modules, without all the heavy python installation.
                 </p>
             </div>
             <div class="col" -8>
                 <h1>Flask</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
-                    incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
-                    deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero
-                    modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                    Flask is a web framework, it's a python module that lets you develop web applications easily. It has cool features like url
+                     routing and template engine.
                 </p>
             </div>
             <div class="col" -8>
-                <h1>Repositories</h1>
+                <h1>Microframework</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
-                    incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
-                    deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero
-                    modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                    Flask is referred to as a microframework. It is designed to keep the core of application simple and sacalable.
+                </p>
+            </div>
+            <div class="col" -8>
+                <h1>Jinja</h1>
+                <p>
+                    Jinja is a popular template engine for python. A web template system that combines a template with a specific data source to render
+                     a dynamic web page.
                 </p>
             </div>
         </div>
