updated docker page content

--- a/app/simple_pages/templates/docker.html
+++ b/app/simple_pages/templates/docker.html
@@ -4,30 +4,42 @@
         <div class="col-8">
             <h1 class="bold">Docker</h1>
             <div class="col" -8>
-                <h1>Docker Hub</h1>
+                <h1>Containers</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
-                    incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
-                    deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero
-                    modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                    A container is a standard unit of software that packages up code and all its dependencies so the
+                    application runs quickly and reliably from one computing environment to another. A Docker container
+                    image is a lightweight, standalone, executable package of software that includes everything needed
+                    to run an application: code, runtime, system tools, system libraries and settings.
                 </p>
             </div>
             <div class="col" -8>
-                <h1>Git</h1>
+                <h1>Images</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
-                    incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
-                    deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero
-                    modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                    A Docker Image is an executable package of software that includes everything needed to run an
+                    application. This image informs how a container should instantiate, determining which software
+                    components will run and how.
                 </p>
             </div>
             <div class="col" -8>
-                <h1>Repositories</h1>
+                <h1>Project Repositories</h1>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium asperiores eos expedita fuga
-                    incidunt maiores nam perspiciatis quis soluta. Consequatur, corporis tempora. Architecto cupiditate
-                    deleniti dolores eos eum expedita fugiat illum impedit incidunt, ipsam ipsum iste laudantium libero
-                    modi nihil numquam, omnis quasi quidem quisquam quos saepe totam ullam vel.
+                    Listed below are links to my docker hub repositories that I have worked so far in this semester.
+                    Coming from no programming background I am happy about my work so far and I am learning a lot,
+                    although
+                    at a slow pace!
+                </p>
+                <ul>
+                    <li><a href="https://hub.docker.com/repository/docker/alarcom1/flaskbase">alarcom1/flaskbase</a></li>
+                    <li><a href="https://hub.docker.com/repository/docker/alarcom1/first-website">alarcom1/firstwebsite</a></li>
+                    <li><a href="https://hub.docker.com/repository/docker/alarcom1/getting-started">alarcom1/getting-started</a></li>
+                    <li><a href="https://hub.docker.com/repository/docker/alarcom1/motest-test1">alarcom1/motest-test1</a></li>
+                </ul>
+            </div>
+            <div class="col" -8>
+                <h1>Docker Development</h1>
+                <p>
+                    Developing and coding with Docker has been new and interesting. First I had to make sure my computer was up to date.
+                     Then I download WindowsLinuxSubsystem2  and installed that.
                 </p>
             </div>
         </div>
